Add new folders, corection of pom.xml and add main class